--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_splash"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
