--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,15 +17,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.marsjiang.mywuhubus.ui.activity.MainActivity">
+        android:orientation="vertical">
 
-        <include layout="@layout/view_headlayout"/>
+        <include
+            layout="@layout/view_headlayout"
+            bind:backClick="@{backClick}"
+            bind:title="@{title}"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            />
+        <com.daimajia.slider.library.SliderLayout
+            android:id="@+id/slider_view"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
+
 
     </LinearLayout>
 
