--- a/app/src/main/res/layout/view_headlayout.xml
+++ b/app/src/main/res/layout/view_headlayout.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
+        <variable
+            name="title"
+            type="String"/>
+
+        <variable
+            name="backClick"
+            type="android.view.View.OnClickListener"/>
     </data>
 
     <RelativeLayout
@@ -18,9 +26,9 @@
             android:layout_centerVertical="true"
             android:ellipsize="end"
             android:singleLine="true"
-            android:text="title"
+            android:text="@{title}"
             android:textColor="@color/colorTitleWhite"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <ImageButton
             android:id="@+id/btn_back"
@@ -32,7 +40,7 @@
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:src="@mipmap/btn_title_back"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_word_right"
@@ -46,10 +54,10 @@
             android:paddingRight="20dp"
             android:paddingTop="10dp"
             android:singleLine="true"
-            android:text="Title"
+            android:text="切换科室"
             android:textColor="@color/colorTitleWhite"
             android:textSize="15sp"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
     </RelativeLayout>
 </layout>
