首页简单完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,29 @@
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider_view"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="0dp"
             android:layout_gravity="center"
+            android:layout_weight="2"
             android:gravity="center"/>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:layout_weight="4">
 
+                <com.marsjiang.mywuhubus.ui.widget.ClearEditText
+                    android:id="@+id/et_bus_search"
+                    style="@style/myClearEditTextStyle"
+                    android:layout_marginTop="30dp"
+                    android:drawableLeft="@mipmap/ic_line"
+                    android:imeOptions="actionDone"/>
+
+                <Button
+                    android:id="@+id/btn_search"
+                    style="@style/myBottomButton"
+                    android:layout_marginTop="30dp"
+                    android:text="@string/search"/>
+        </LinearLayout>
     </LinearLayout>
-
 </layout>
