--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,4 +78,25 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
+
+    <style name="myClearEditTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:textColor">@color/colorBlueFont</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/tv_back_white</item>
+        <item name="android:drawableRight">@drawable/delete_selector</item>
+    </style>
+
+    <style name="myBottomButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44dp</item>
+        <item name="android:textColor">@color/colorTitleWhite</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/btn_submit_blue</item>
+    </style>
 </resources>
